--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
     
     <div id="div_texto">
         <h3 id="titulo3">
-            En este día tan especial, quiero recordarte cuánto significas para mí.
-            Tu amor ilumina mis días más oscuros y tu sonrisa es el sol que calienta mi corazón. 
-            Cada momento a tu lado es un tesoro que guardo con cariño. 
-            Eres mi inspiración, mi refugio y mi todo. 
-            Gracias por compartir tu vida conmigo y por ser la persona maravillosa que eres.
-            Te amo más de lo que las palabras pueden expresar, y estoy eternamente agradecido por tenerte a mi lado.
-            Feliz Día de San Valentín, mi amor.
+            En este día tan especial, quiero recordarte cuánto significado tienes para mí, recordarte lo mucho que te amo y los buenos momentos que he pasado contigo, a pensar de todas las cosas buenas y malas no tengo dudas que quiero seguir a tu lado porque tú sonrisa y tus ojitos me motivan a seguir adelante. Solo quiero que sepas que eres demasiado importante para mí, espero que nunca pienses lo contrario, eres lo primero que pienso al levantarme y lo último que pienso al acostarme. Saber que te tengo a mi lado ilumina mis días, sigue siendo la niña preciosa que eres con esos ojitos y sonrisa que me encanta. Te amo demasiado mi niña preciosa ❤‍🩹
         </h3>
     </div>
 
